--- a/trunk/arrg/ua_apps/wubble2_robot/config/wubble_head.yaml
+++ b/trunk/arrg/ua_apps/wubble2_robot/config/wubble_head.yaml
@@ -1,39 +1,31 @@
 head_pan_controller:
-    controller:
-        package: dynamixel_controllers
-        module: joint_position_controller
-        type: JointPositionController
-    joint_name: head_pan_joint
-    joint_speed: 1.17
-    motor:
-        id: 10
-        init: 512
-        min: 0
-        max: 1023
+    type: dynamixel_hardware_interface/JointPositionController
+    joint: head_pan_joint
+    motors:
+        - id: 10
+          init: 512
+          min: 0
+          max: 1023
+          compliance_margin: 0
+          compliance_slope: 16
 
 head_tilt_controller:
-    controller:
-        package: dynamixel_controllers
-        module: joint_position_controller
-        type: JointPositionController
-    joint_name: head_tilt_joint
-    joint_speed: 1.17
-    motor:
-        id: 11
-        init: 1690
-        min: 600
-        max: 3500
+    type: dynamixel_hardware_interface/JointPositionController
+    joint: head_tilt_joint
+    motors:
+        - id: 11
+          init: 1690
+          min: 600
+          max: 3500
+          compliance_margin: 0
+          compliance_slope: 16
 
 neck_tilt_controller:
-    controller:
-        package: dynamixel_controllers
-        module: joint_position_controller
-        type: JointPositionController
-    joint_name: neck_tilt_joint
-    joint_speed: 1.17
-    motor:
-        id: 12
-        init: 2047
-        min: 2000
-        max: 3130
+    type: dynamixel_hardware_interface/JointPositionController
+    joint: neck_tilt_joint
+    motors:
+        - id: 12
+          init: 2047
+          min: 2000
+          max: 3130
 
