--- a/trunk/arrg/ua_experimental/wubble2_arm_navigation/config/wubble2_planning_description.yaml
+++ b/trunk/arrg/ua_experimental/wubble2_arm_navigation/config/wubble2_planning_description.yaml
@@ -30,6 +30,8 @@ default_collision_operations:
   - object1: L9_right_finger_link
     object2: left_fingertip_link
     operation: disable  # Gripper fingers can touch
+  - object1: L1_shoulder_pitch_link
+    object2: platform_link
   
   - object1: base_footprint
     object2: base_link
