--- a/arrg/ua_experimental/sklearn/Makefile
+++ b/arrg/ua_experimental/sklearn/Makefile
@@ -19,10 +19,9 @@ installed: clean prep install_learn
 	touch installed
 
 clean:
-	rm -rf src
+	rm -rf $(BUILD_DIR) src
 	rm -rf installed
 
 wipe: clean
-	rm -rf $(BUILD_DIR)
 	touch wiped
 
