--- a/trunk/arrg/ua_experimental/pybrain/Makefile
+++ b/trunk/arrg/ua_experimental/pybrain/Makefile
@@ -15,7 +15,7 @@ installed: download clean
 	touch installed
 
 clean:
-	rm -rf src docs examples
+	rm -rf $(GIT_DIR) src docs examples
 	rm -rf installed
 
 wipe: clean
